Fixed-cause auto-adjustments + future-dated actions + arrears sweep
Auto-adjustments (V039-V041):
- transactions carry direct group_id/member_id ownership (V039); no
  longer routed through contribution_id at create time. Historical rows
  backfilled from the linked contribution/invoice.
- transaction_types catalogue reshaped for legible signs (V041):
  PAYMENT/REFUND/CHARGE/CREDIT/DEBIT/WRITE_OFF/PAYMENT_REVERSAL plus
  four fixed-cause codes (LATE_ENROLMENT_CHARGE, LATE_TERMINATION_CREDIT,
  SCHEME_UPGRADE_ARREARS, SCHEME_DOWNGRADE_REBATE). Reason column added
  and required only for CREDIT/DEBIT.
- Three consumers auto-post the fixed-cause codes from Kafka events:
  member enrolled with a back-dated enrolment_date, member terminated
  after a period was already billed, and scheme change made effective
  in an already-billed period. Aggregate one transaction per event
  (reference-key idempotent) via the new LateAdjustmentService which
  reuses BillingService.priceOneMember for the same amount a normal
  billing run would post.

Statement rendering:
- Ledger + statement lines now use the catalog's friendly label
  instead of the raw code; adjustments show their operator reason when
  set. No UUIDs on receipt PDFs or emails (Valued group/member
  fallback replaces the truncated-id label pattern).

Receipt pipeline (PDF + email):
- ORDINARY -> PAYMENT contributions publish TransactionRecorded which
  file-service renders into a payment-receipt PDF and republishes as
  ReceiptPdfReady; notification-service consumes it, fetches the PDF
  from MinIO and emails it to the group liaison or member.

Future-dated actions (V042):
- members/groups grow a scheduled_status trio; MemberService/GroupService
  branch on effectiveDate: null/today/past applies immediately; future
  stashes the change and lets the daily SCHEDULED_STATUS_ROLL job apply
  it. Group deactivate/terminate cascades to active/suspended members.
- New idempotent POST /{id}/actions/{action} endpoints on membe